--- a/index.html
+++ b/index.html
@@ -8,37 +8,113 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script src="https://kit.fontawesome.com/a0c38bd0e3.js" crossorigin="anonymous"></script>
   <title>ohmyfood</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./public/styles/main.css">
 </head>
 
 <body>
   <header>
-    <h1>Ohmyfood</h1>
+      <img src="./public/images/logo/ohmyfood.png" alt="Logo">
   </header>
-  <form action="/action_page.php" target="_self">
-    <i class="fa-solid fa-location-dot"></i>
-    <input type="text" placeholder="Islington, London" id="City">
-  </form>
+  <div class="location">
+    <i class="fa-solid fa-location-dot dot"></i>
+    <p>Islington, London</p>
+  </div>
 
-  <section>
+  <section class="explore">
     <h1>Book the meal you want</h1>
     <p>Discover our carefully selected high-end restaurants</p>
-    <div class="btn">
+    <button>
       Explore our restaurants
+    </button>
+  </section>
+
+  <div class="how-it-works">
+    <h2>How it works</h2>
+    <ol>
+      <li>
+        <div class="icon-circle" ">1</div>
+        <i class=" fa-solid fa-mobile-screen icon"></i>
+          <p>Choose a restaurant</p>
+      </li>
+      <li>
+        <div class="icon-circle" ">2</div>
+        <i class=" fa-solid fa-list icon"></i>
+          <p>Build your meal</p>
+      </li>
+      <li>
+        <div class="icon-circle" ">3</div>
+        <i class=" fa-solid fa-store icon-color"></i>
+          <p>Enjoy your meal at the restaurant</p>
+      </li>
+    </ol>
+  </div>
+
+  <section class="restaurants">
+    <h2>Restaurants</h2>
+    <div class="cards">
+      <a class="card" href="#">
+        <p class="new">New</p>
+        <img src="public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Kitchen West">
+        <div class="card-content">
+          <h3>Kitchen West</h3>
+          <p>Angel</p>
+        </div>
+        <i class="fa-regular fa-heart heart"></i>
+      </a>
+      <a class="card" href="#">
+        <p class="new">New</p>
+        <img src="public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Elderflower">
+        <div class="card-content">
+          <h3>Elderflower</i></h3>
+          <p>Old Street</p>
+        </div>
+        <i class="fa-solid fa-heart full-heart"></i>
+      </a>
+      <a class="card" href="#">
+        <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Shoreditch">
+        <div class="card-content">
+          <h3>Shoreditch Canteen</h3>
+          <p>Shoreditch</p>
+        </div>
+        <i class="fa-regular fa-heart heart"></i>
+      </a>
+      <a class="card" href="#">
+        <img src="public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="The Bay Leaf">
+        <div class="card-content">
+          <h3>The Bay Leaf</h3>
+          <p>Hoxton</p>
+        </div>
+        <i class="fa-regular fa-heart heart"></i>
+      </a>
     </div>
   </section>
 
-  <section>
-    <h1>How it works</h1>
-  </section>
-
-  <section>
-    <h1>Restaurants</h1>
-    <div class=" content">
-
-    </div>
-  </section>
+  <footer>
+    <h2>ohmyfood</h2>
+    <ul>
+      <li>
+        <i class="fa-solid fa-utensils"></i>
+        <p>Suggest a restaurant</p>
+      </li>
+      <li>
+        <i class="fa-solid fa-handshake-angle"></i>
+        <p>Become a partner</p>
+      </li>
+      <li>
+        <p>Legal notice</p>
+      </li>
+      <li>
+        <p>Contact</p>
+      </li>
+    </ul>
+  </footer>
 </body>
 
 </html>
