--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-  <header>
-      <img src="./public/images/logo/ohmyfood.png" alt="Logo">
+  <header class="logo">
+      <img class= logo__image src="./public/images/logo/ohmyfood.png" alt="Logo">
   </header>
   <div class="location">
     <i class="fa-solid fa-location-dot dot"></i>
@@ -28,8 +28,8 @@
   </div>
 
   <section class="explore">
-    <h1>Book the meal you want</h1>
-    <p>Discover our carefully selected high-end restaurants</p>
+    <h1 class="explore__title">Book the meal you want</h1>
+    <p class="explore__text">Discover our carefully selected high-end restaurants</p>
     <button>
       Explore our restaurants
     </button>
@@ -39,17 +39,17 @@
     <h2>How it works</h2>
     <ol>
       <li>
-        <div class="icon-circle" ">1</div>
+        <div class="icon-circle">1</div>
         <i class=" fa-solid fa-mobile-screen icon"></i>
           <p>Choose a restaurant</p>
       </li>
       <li>
-        <div class="icon-circle" ">2</div>
+        <div class="icon-circle">2</div>
         <i class=" fa-solid fa-list icon"></i>
           <p>Build your meal</p>
       </li>
       <li>
-        <div class="icon-circle" ">3</div>
+        <div class="icon-circle">3</div>
         <i class=" fa-solid fa-store icon-color"></i>
           <p>Enjoy your meal at the restaurant</p>
       </li>
@@ -61,8 +61,8 @@
     <div class="cards">
       <a class="card" href="#">
         <p class="new">New</p>
-        <img src="public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Kitchen West">
-        <div class="card-content">
+        <img class="card__image" src="public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Kitchen West">
+        <div class="card__body">
           <h3>Kitchen West</h3>
           <p>Angel</p>
         </div>
@@ -70,24 +70,24 @@
       </a>
       <a class="card" href="#">
         <p class="new">New</p>
-        <img src="public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Elderflower">
-        <div class="card-content">
+        <img class="card__image" src="public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Elderflower">
+        <div class="card__body">
           <h3>Elderflower</i></h3>
           <p>Old Street</p>
         </div>
-        <i class="fa-solid fa-heart full-heart"></i>
+        <i class="fa-regular fa-heart heart--full"></i>
       </a>
       <a class="card" href="#">
-        <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Shoreditch">
-        <div class="card-content">
+        <img class="card__image" src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Shoreditch">
+        <div class="card__body">
           <h3>Shoreditch Canteen</h3>
           <p>Shoreditch</p>
         </div>
         <i class="fa-regular fa-heart heart"></i>
       </a>
       <a class="card" href="#">
-        <img src="public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="The Bay Leaf">
-        <div class="card-content">
+        <img class="card__image" src="public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="The Bay Leaf">
+        <div class="card__body">
           <h3>The Bay Leaf</h3>
           <p>Hoxton</p>
         </div>
