added shadow under the logo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
   </section>
 
   <div class="how-it-works">
+    <div class="how-it-works__title">
     <h2>How it works</h2>
+  </div>
     <ol>
       <li>
         <div class="icon-circle">1</div>
