--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p class="new">New</p>
         <img class="card__image" src="public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Elderflower">
         <div class="card__body">
-          <h3>Elderflower</i></h3>
+          <h3>Elderflower</h3>
           <p>Old Street</p>
         </div>
         <div class="heart">
