created all 4 restaurant pages and linked them to the home page

--- a/public/pages/shoreditch-canteen.html
+++ b/public/pages/shoreditch-canteen.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <script src="https://kit.fontawesome.com/a0c38bd0e3.js" crossorigin="anonymous"></script>
-  <title>Kitchen West</title>
+  <title>Shoreditch Canteen</title>
   <link rel="stylesheet" href="../styles/pages.css">
 </head>
 
@@ -26,63 +26,63 @@
     <img class=logo__image src="../images/logo/ohmyfood.png" alt="Logo">
   </header>
   <section class="menu">
-    <img class=menu__image src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Kitchen West">
+    <img class=menu__image src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Shoreditch Canteen">
     <div class="corazon">
       <i class="fa-regular fa-heart corazon__empty"></i>
       <i class="fa-solid fa-heart corazon__full"></i>
     </div>
-    <h2 class="menu__title">Kitchen West</h2>
+    <h2 class="menu__title">Shoreditch Canteen</h2>
     <section class="category">
       <h3 class="category__title">Starters</h3>
       <div class="item">
-        <div class="item__title">Smoked Salmon</div>
-        <div class="item__content">With beetroot and horseradish</div>
+        <div class="item__title">Tangy octopus tartare</div>
+        <div class="item__content">With orange zest</div>
         <div class="item__price">£25</div>
       </div>
       <div class="item">
-        <div class="item__title">Ham hock terrine</div>
-        <div class="item__content">With piccalilli</div>
+        <div class="item__title">Cream of root vegetable soup</div>
+        <div class="item__content">Carrot, parsnip, Jerusalem artichoke</div>
         <div class="item__price">£35</div>
       </div>
       <div class="item">
-        <div class="item__title">Poached egg</div>
-        <div class="item__content">With asparagus and hollandaise</div>
+        <div class="item__title">French onion soup</div>
+        <div class="item__content">With cheesy croutons</div>
         <div class="item__price">£20</div>
       </div>
     </section>
     <section class="category">
       <h3 class="category__title">Mains</h3>
       <div class="item">
-        <div class="item__title">Beef fillet with herb butter</div>
-        <div class="item__content">Served with a vegetable medley</div>
+        <div class="item__title">Scallops</div>
+        <div class="item__content">With parsnip purée</div>
         <div class="item__price">£40</div>
       </div>
       <div class="item">
-        <div class="item__title">Braised oxtail cottage pie</div>
-        <div class="item__content">With black truffle and parsnip puree</div>
+        <div class="item__title">Pan-fried duck breast</div>
+        <div class="item__content">With crushed potatoes</div>
         <div class="item__price">£35</div>
       </div>
       <div class="item">
-        <div class="item__title">Fillet of turbot</div>
-        <div class="item__content">With citrus dressing</div>
+        <div class="item__title">Roasted pigeon</div>
+        <div class="item__content">Served on gnocchi and vegetables</div>
         <div class="item__price">£44</div>
       </div>
     </section>
     <section class="category">
       <h3 class="category__title">Desserts</h3>
       <div class="item">
-        <div class="item__title">Treacle tart</div>
-        <div class="item__content">With Cornish clotted cream</div>
+        <div class="item__title">Forest fruit cheesecake</div>
+        <div class="item__content">With blackcurrant sorbet</div>
         <div class="item__price">£18</div>
       </div>
       <div class="item">
-        <div class="item__title">Lemon posset</div>
-        <div class="item__content">With shortbread biscuit</div>
+        <div class="item__title">Chocolate fondant</div>
+        <div class="item__content">With clotted cream</div>
         <div class="item__price">£22</div>
       </div>
       <div class="item">
-        <div class="item__title">Chocolate mousse</div>
-        <div class="item__content">With a hint of chili and a hazelnut tuile</div>
+        <div class="item__title">Crispy millefeuille</div>
+        <div class="item__content">With blueberries and almonds</div>
         <div class="item__price">£23</div>
       </div>
     </section>
