--- a/public/pages/the-bay-leaf.html
+++ b/public/pages/the-bay-leaf.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <script src="https://kit.fontawesome.com/a0c38bd0e3.js" crossorigin="anonymous"></script>
-  <title>Kitchen West</title>
+  <title>The Bay Leaf</title>
   <link rel="stylesheet" href="../styles/pages.css">
 </head>
 
@@ -26,12 +26,12 @@
     <img class=logo__image src="../images/logo/ohmyfood.png" alt="Logo">
   </header>
   <section class="menu">
-    <img class=menu__image src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Kitchen West">
+    <img class=menu__image src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="The Bay Leaf">
     <div class="corazon">
       <i class="fa-regular fa-heart corazon__empty"></i>
       <i class="fa-solid fa-heart corazon__full"></i>
     </div>
-    <h2 class="menu__title">Kitchen West</h2>
+    <h2 class="menu__title">The Bay Leaf</h2>
     <section class="category">
       <h3 class="category__title">Starters</h3>
       <div class="item">
