--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section class="restaurants">
     <h2>Restaurants</h2>
     <div class="cards">
-      <a class="card" href="#">
+      <a class="card" href="./public/pages/kitchen-west.html">
         <p class="new">New</p>
         <img class="card__image" src="public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
           alt="Kitchen West">
@@ -74,7 +74,7 @@
           <i class="fa-solid fa-heart heart__full"></i>
         </div>
       </a>
-      <a class="card" href="#">
+      <a class="card" href="./public/pages/elderflower.html">
         <p class="new">New</p>
         <img class="card__image" src="public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Elderflower">
         <div class="card__body">
@@ -86,7 +86,7 @@
           <i class="fa-solid fa-heart heart__full"></i>
         </div>
       </a>
-      <a class="card" href="#">
+      <a class="card" href="./public/pages/shoreditch-canteen.html">
         <img class="card__image" src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Shoreditch">
         <div class="card__body">
           <h3>Shoreditch Canteen</h3>
@@ -97,7 +97,7 @@
           <i class="fa-solid fa-heart heart__full"></i>
         </div>
       </a>
-      <a class="card" href="#">
+      <a class="card" href="./public/pages/the-bay-leaf.html">
         <img class="card__image" src="public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
           alt="The Bay Leaf">
         <div class="card__body">
