--- a/public/pages/elderflower.html
+++ b/public/pages/elderflower.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <script src="https://kit.fontawesome.com/a0c38bd0e3.js" crossorigin="anonymous"></script>
-  <title>Kitchen West</title>
+  <title>Elderflower</title>
   <link rel="stylesheet" href="../styles/pages.css">
 </head>
 
@@ -26,63 +26,68 @@
     <img class=logo__image src="../images/logo/ohmyfood.png" alt="Logo">
   </header>
   <section class="menu">
-    <img class=menu__image src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Kitchen West">
+    <img class=menu__image src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Elderflower">
     <div class="corazon">
       <i class="fa-regular fa-heart corazon__empty"></i>
       <i class="fa-solid fa-heart corazon__full"></i>
     </div>
-    <h2 class="menu__title">Kitchen West</h2>
+    <h2 class="menu__title">Elderflower</h2>
     <section class="category">
       <h3 class="category__title">Starters</h3>
       <div class="item">
-        <div class="item__title">Smoked Salmon</div>
-        <div class="item__content">With beetroot and horseradish</div>
+        <div class="item__title">Brisket ravioli</div>
+        <div class="item__content">Served with truffle cream</div>
         <div class="item__price">£25</div>
       </div>
       <div class="item">
-        <div class="item__title">Ham hock terrine</div>
-        <div class="item__content">With piccalilli</div>
+        <div class="item__title">Beluga caviar</div>
+        <div class="item__content">Served on buckwheat blinis</div>
         <div class="item__price">£35</div>
       </div>
       <div class="item">
-        <div class="item__title">Poached egg</div>
-        <div class="item__content">With asparagus and hollandaise</div>
+        <div class="item__title">Lobster with pumpkin foam</div>
+        <div class="item__content">And orange zest</div>
         <div class="item__price">£20</div>
+      </div>
+      <div class="item">
+        <div class="item__title">Duck terrine</div>
+        <div class="item__content">Fig jam and toasted brioche</div>
+        <div class="item__price">£35</div>
       </div>
     </section>
     <section class="category">
       <h3 class="category__title">Mains</h3>
       <div class="item">
-        <div class="item__title">Beef fillet with herb butter</div>
-        <div class="item__content">Served with a vegetable medley</div>
+        <div class="item__title">Scallops</div>
+        <div class="item__content">On a bed of celeriac purée</div>
         <div class="item__price">£40</div>
       </div>
       <div class="item">
-        <div class="item__title">Braised oxtail cottage pie</div>
-        <div class="item__content">With black truffle and parsnip puree</div>
+        <div class="item__title">Pan-fried langoustine</div>
+        <div class="item__content">With sweet potato mash</div>
         <div class="item__price">£35</div>
       </div>
       <div class="item">
-        <div class="item__title">Fillet of turbot</div>
-        <div class="item__content">With citrus dressing</div>
+        <div class="item__title">Braised oxtail</div>
+        <div class="item__content">With lemon-zested wild rice</div>
         <div class="item__price">£44</div>
       </div>
     </section>
     <section class="category">
       <h3 class="category__title">Desserts</h3>
       <div class="item">
-        <div class="item__title">Treacle tart</div>
-        <div class="item__content">With Cornish clotted cream</div>
+        <div class="item__title">Chocolate parfait</div>
+        <div class="item__content">With salted caramel ice cream</div>
         <div class="item__price">£18</div>
       </div>
       <div class="item">
-        <div class="item__title">Lemon posset</div>
-        <div class="item__content">With shortbread biscuit</div>
+        <div class="item__title">Deconstructed rum baba</div>
+        <div class="item__content">With lemon coulis</div>
         <div class="item__price">£22</div>
       </div>
       <div class="item">
-        <div class="item__title">Chocolate mousse</div>
-        <div class="item__content">With a hint of chili and a hazelnut tuile</div>
+        <div class="item__title">Lemon meringue pie</div>
+        <div class="item__content">Deconstructed</div>
         <div class="item__price">£23</div>
       </div>
     </section>
