added green check mark next to 1 menu item

--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
     <h2>ohmyfood</h2>
     <ul>
       <li>
-        <i class="fa-solid fa-utensils"></i>
+        <i class="kitchen-icon fa-solid fa-utensils"></i>
         <p>Suggest a restaurant</p>
       </li>
       <li>
-        <i class="fa-solid fa-handshake-angle"></i>
+        <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
         <p>Become a partner</p>
       </li>
       <li>
