--- a/public/pages/kitchen-west.html
+++ b/public/pages/kitchen-west.html
@@ -20,83 +20,88 @@
 
 <body>
   <header class="logo">
-    <nav>
+    <a href="index.html">
       <i class="back fa-solid fa-arrow-left"></i>
-    </nav>
+    </a>
     <img class=logo__image src="../images/logo/ohmyfood.png" alt="Logo">
   </header>
-  <section class="menu">
-    <img class=menu__image src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Kitchen West">
-    <div class="corazon">
-      <i class="fa-regular fa-heart corazon__empty"></i>
-      <i class="fa-solid fa-heart corazon__full"></i>
-    </div>
-    <h2 class="menu__title">Kitchen West</h2>
-    <section class="category">
-      <h3 class="category__title">Starters</h3>
-      <div class="item">
-        <div class="item__title">Smoked Salmon</div>
-        <div class="item__content">With beetroot and horseradish</div>
-        <div class="item__price">£25</div>
+  <img class=menu__image src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Kitchen West">
+  <section class="menu-and-blank">
+    <section class="menu">
+      <div class="corazon">
+        <i class="fa-regular fa-heart corazon__empty"></i>
+        <i class="fa-solid fa-heart corazon__full"></i>
       </div>
-      <div class="item">
-        <div class="item__title">Ham hock terrine</div>
-        <div class="item__content">With piccalilli</div>
-        <div class="item__price">£35</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Poached egg</div>
-        <div class="item__content">With asparagus and hollandaise</div>
-        <div class="item__price">£20</div>
-      </div>
+      <h2 class="menu__title">Kitchen West</h2>
+      <section class="category">
+        <h3 class="category__title">Starters</h3>
+        <div class="item">
+          <div class="item__title">Smoked Salmon</div>
+          <div class="item__content">With beetroot and horseradish</div>
+          <div class="item__price">£25</div>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item__title">Ham hock terrine</div>
+          <div class="item__content">With piccalilli</div>
+          <div class="item__price">£35</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Poached egg</div>
+          <div class="item__content">With asparagus and hollandaise</div>
+          <div class="item__price">£20</div>
+        </div>
+      </section>
+      <section class="category">
+        <h3 class="category__title">Mains</h3>
+        <div class="item">
+          <div class="item__title">Beef fillet with herb butter</div>
+          <div class="item__content">Served with a vegetable medley</div>
+          <div class="item__price">£40</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Braised oxtail cottage pie</div>
+          <div class="item__content">With black truffle and parsnip puree</div>
+          <div class="item__price">£35</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Fillet of turbot</div>
+          <div class="item__content">With citrus dressing</div>
+          <div class="item__price">£44</div>
+        </div>
+      </section>
+      <section class="category">
+        <h3 class="category__title">Desserts</h3>
+        <div class="item">
+          <div class="item__title">Treacle tart</div>
+          <div class="item__content">With Cornish clotted cream</div>
+          <div class="item__price">£18</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Lemon posset</div>
+          <div class="item__content">With shortbread biscuit</div>
+          <div class="item__price">£22</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Chocolate mousse</div>
+          <div class="item__content">With a hint of chili and a hazelnut tuile</div>
+          <div class="item__price">£23</div>
+        </div>
+        <a class="order-button" href="#">Order</a>
+      </section>
     </section>
-    <section class="category">
-      <h3 class="category__title">Mains</h3>
-      <div class="item">
-        <div class="item__title">Beef fillet with herb butter</div>
-        <div class="item__content">Served with a vegetable medley</div>
-        <div class="item__price">£40</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Braised oxtail cottage pie</div>
-        <div class="item__content">With black truffle and parsnip puree</div>
-        <div class="item__price">£35</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Fillet of turbot</div>
-        <div class="item__content">With citrus dressing</div>
-        <div class="item__price">£44</div>
-      </div>
-    </section>
-    <section class="category">
-      <h3 class="category__title">Desserts</h3>
-      <div class="item">
-        <div class="item__title">Treacle tart</div>
-        <div class="item__content">With Cornish clotted cream</div>
-        <div class="item__price">£18</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Lemon posset</div>
-        <div class="item__content">With shortbread biscuit</div>
-        <div class="item__price">£22</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Chocolate mousse</div>
-        <div class="item__content">With a hint of chili and a hazelnut tuile</div>
-        <div class="item__price">£23</div>
-      </div>
-    </section>
-    <a class="order-button" href="#">Order</a>
   </section>
   <footer>
     <h2>ohmyfood</h2>
     <ul>
       <li>
-        <i class="fa-solid fa-utensils"></i>
+        <i class="kitchen-icon fa-solid fa-utensils"></i>
         <p>Suggest a restaurant</p>
       </li>
       <li>
-        <i class="fa-solid fa-handshake-angle"></i>
+        <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
         <p>Become a partner</p>
       </li>
       <li>
