--- a/public/pages/elderflower.html
+++ b/public/pages/elderflower.html
@@ -25,83 +25,85 @@
     </nav>
     <img class=logo__image src="../images/logo/ohmyfood.png" alt="Logo">
   </header>
-  <section class="menu">
-    <img class=menu__image src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Elderflower">
-    <div class="corazon">
-      <i class="fa-regular fa-heart corazon__empty"></i>
-      <i class="fa-solid fa-heart corazon__full"></i>
-    </div>
-    <h2 class="menu__title">Elderflower</h2>
-    <section class="category">
-      <h3 class="category__title">Starters</h3>
-      <div class="item">
-        <div class="item__title">Brisket ravioli</div>
-        <div class="item__content">Served with truffle cream</div>
-        <div class="item__price">£25</div>
+  <img class=menu__image src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Elderflower">
+  <section class="menu-and-blank">
+    <section class="menu">
+      <div class="corazon">
+        <i class="fa-regular fa-heart corazon__empty"></i>
+        <i class="fa-solid fa-heart corazon__full"></i>
       </div>
-      <div class="item">
-        <div class="item__title">Beluga caviar</div>
-        <div class="item__content">Served on buckwheat blinis</div>
-        <div class="item__price">£35</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Lobster with pumpkin foam</div>
-        <div class="item__content">And orange zest</div>
-        <div class="item__price">£20</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Duck terrine</div>
-        <div class="item__content">Fig jam and toasted brioche</div>
-        <div class="item__price">£35</div>
-      </div>
+      <h2 class="menu__title">Elderflower</h2>
+      <section class="category">
+        <h3 class="category__title">Starters</h3>
+        <div class="item">
+          <div class="item__title">Brisket ravioli</div>
+          <div class="item__content">Served with truffle cream</div>
+          <div class="item__price">£25</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Beluga caviar</div>
+          <div class="item__content">Served on buckwheat blinis</div>
+          <div class="item__price">£35</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Lobster with pumpkin foam</div>
+          <div class="item__content">And orange zest</div>
+          <div class="item__price">£20</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Duck terrine</div>
+          <div class="item__content">Fig jam and toasted brioche</div>
+          <div class="item__price">£35</div>
+        </div>
+      </section>
+      <section class="category">
+        <h3 class="category__title">Mains</h3>
+        <div class="item">
+          <div class="item__title">Scallops</div>
+          <div class="item__content">On a bed of celeriac purée</div>
+          <div class="item__price">£40</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Pan-fried langoustine</div>
+          <div class="item__content">With sweet potato mash</div>
+          <div class="item__price">£35</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Braised oxtail</div>
+          <div class="item__content">With lemon-zested wild rice</div>
+          <div class="item__price">£44</div>
+        </div>
+      </section>
+      <section class="category">
+        <h3 class="category__title">Desserts</h3>
+        <div class="item">
+          <div class="item__title">Chocolate parfait</div>
+          <div class="item__content">With salted caramel ice cream</div>
+          <div class="item__price">£18</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Deconstructed rum baba</div>
+          <div class="item__content">With lemon coulis</div>
+          <div class="item__price">£22</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Lemon meringue pie</div>
+          <div class="item__content">Deconstructed</div>
+          <div class="item__price">£23</div>
+        </div>
+        <a class="order-button" href="#">Order</a>
+      </section>
     </section>
-    <section class="category">
-      <h3 class="category__title">Mains</h3>
-      <div class="item">
-        <div class="item__title">Scallops</div>
-        <div class="item__content">On a bed of celeriac purée</div>
-        <div class="item__price">£40</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Pan-fried langoustine</div>
-        <div class="item__content">With sweet potato mash</div>
-        <div class="item__price">£35</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Braised oxtail</div>
-        <div class="item__content">With lemon-zested wild rice</div>
-        <div class="item__price">£44</div>
-      </div>
-    </section>
-    <section class="category">
-      <h3 class="category__title">Desserts</h3>
-      <div class="item">
-        <div class="item__title">Chocolate parfait</div>
-        <div class="item__content">With salted caramel ice cream</div>
-        <div class="item__price">£18</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Deconstructed rum baba</div>
-        <div class="item__content">With lemon coulis</div>
-        <div class="item__price">£22</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Lemon meringue pie</div>
-        <div class="item__content">Deconstructed</div>
-        <div class="item__price">£23</div>
-      </div>
-    </section>
-    <a class="order-button" href="#">Order</a>
   </section>
   <footer>
     <h2>ohmyfood</h2>
     <ul>
       <li>
-        <i class="fa-solid fa-utensils"></i>
+        <i class="kitchen-icon fa-solid fa-utensils"></i>
         <p>Suggest a restaurant</p>
       </li>
       <li>
-        <i class="fa-solid fa-handshake-angle"></i>
+        <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
         <p>Become a partner</p>
       </li>
       <li>
