--- a/public/pages/shoreditch-canteen.html
+++ b/public/pages/shoreditch-canteen.html
@@ -25,78 +25,80 @@
     </nav>
     <img class=logo__image src="../images/logo/ohmyfood.png" alt="Logo">
   </header>
-  <section class="menu">
-    <img class=menu__image src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Shoreditch Canteen">
-    <div class="corazon">
-      <i class="fa-regular fa-heart corazon__empty"></i>
-      <i class="fa-solid fa-heart corazon__full"></i>
-    </div>
-    <h2 class="menu__title">Shoreditch Canteen</h2>
-    <section class="category">
-      <h3 class="category__title">Starters</h3>
-      <div class="item">
-        <div class="item__title">Tangy octopus tartare</div>
-        <div class="item__content">With orange zest</div>
-        <div class="item__price">£25</div>
+  <img class=menu__image src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Shoreditch Canteen">
+  <section class="menu-and-blank">
+    <section class="menu">
+      <div class="corazon">
+        <i class="fa-regular fa-heart corazon__empty"></i>
+        <i class="fa-solid fa-heart corazon__full"></i>
       </div>
-      <div class="item">
-        <div class="item__title">Cream of root vegetable soup</div>
-        <div class="item__content">Carrot, parsnip, Jerusalem artichoke</div>
-        <div class="item__price">£35</div>
-      </div>
-      <div class="item">
-        <div class="item__title">French onion soup</div>
-        <div class="item__content">With cheesy croutons</div>
-        <div class="item__price">£20</div>
-      </div>
+      <h2 class="menu__title">Shoreditch Canteen</h2>
+      <section class="category">
+        <h3 class="category__title">Starters</h3>
+        <div class="item">
+          <div class="item__title">Tangy octopus tartare</div>
+          <div class="item__content">With orange zest</div>
+          <div class="item__price">£25</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Cream of root vegetable soup</div>
+          <div class="item__content">Carrot, parsnip, Jerusalem artichoke</div>
+          <div class="item__price">£35</div>
+        </div>
+        <div class="item">
+          <div class="item__title">French onion soup</div>
+          <div class="item__content">With cheesy croutons</div>
+          <div class="item__price">£20</div>
+        </div>
+      </section>
+      <section class="category">
+        <h3 class="category__title">Mains</h3>
+        <div class="item">
+          <div class="item__title">Scallops</div>
+          <div class="item__content">With parsnip purée</div>
+          <div class="item__price">£40</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Pan-fried duck breast</div>
+          <div class="item__content">With crushed potatoes</div>
+          <div class="item__price">£35</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Roasted pigeon</div>
+          <div class="item__content">Served on gnocchi and vegetables</div>
+          <div class="item__price">£44</div>
+        </div>
+      </section>
+      <section class="category">
+        <h3 class="category__title">Desserts</h3>
+        <div class="item">
+          <div class="item__title">Forest fruit cheesecake</div>
+          <div class="item__content">With blackcurrant sorbet</div>
+          <div class="item__price">£18</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Chocolate fondant</div>
+          <div class="item__content">With clotted cream</div>
+          <div class="item__price">£22</div>
+        </div>
+        <div class="item">
+          <div class="item__title">Crispy millefeuille</div>
+          <div class="item__content">With blueberries and almonds</div>
+          <div class="item__price">£23</div>
+        </div>
+        <a class="order-button" href="#">Order</a>
+      </section>
     </section>
-    <section class="category">
-      <h3 class="category__title">Mains</h3>
-      <div class="item">
-        <div class="item__title">Scallops</div>
-        <div class="item__content">With parsnip purée</div>
-        <div class="item__price">£40</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Pan-fried duck breast</div>
-        <div class="item__content">With crushed potatoes</div>
-        <div class="item__price">£35</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Roasted pigeon</div>
-        <div class="item__content">Served on gnocchi and vegetables</div>
-        <div class="item__price">£44</div>
-      </div>
-    </section>
-    <section class="category">
-      <h3 class="category__title">Desserts</h3>
-      <div class="item">
-        <div class="item__title">Forest fruit cheesecake</div>
-        <div class="item__content">With blackcurrant sorbet</div>
-        <div class="item__price">£18</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Chocolate fondant</div>
-        <div class="item__content">With clotted cream</div>
-        <div class="item__price">£22</div>
-      </div>
-      <div class="item">
-        <div class="item__title">Crispy millefeuille</div>
-        <div class="item__content">With blueberries and almonds</div>
-        <div class="item__price">£23</div>
-      </div>
-    </section>
-    <a class="order-button" href="#">Order</a>
   </section>
   <footer>
     <h2>ohmyfood</h2>
     <ul>
       <li>
-        <i class="fa-solid fa-utensils"></i>
+        <i class="kitchen-icon fa-solid fa-utensils"></i>
         <p>Suggest a restaurant</p>
       </li>
       <li>
-        <i class="fa-solid fa-handshake-angle"></i>
+        <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
         <p>Become a partner</p>
       </li>
       <li>
