added transition effect onto starters, mains and desserts

--- a/public/pages/elderflower.html
+++ b/public/pages/elderflower.html
@@ -33,7 +33,7 @@
         <i class="fa-solid fa-heart corazon__full"></i>
       </div>
       <h2 class="menu__title">Elderflower</h2>
-      <section class="category">
+      <section class="starters">
         <h3 class="category__title">Starters</h3>
         <div class="item">
           <div class="item__title">Brisket ravioli</div>
@@ -56,7 +56,7 @@
           <div class="item__price">£35</div>
         </div>
       </section>
-      <section class="category">
+      <section class="mains">
         <h3 class="category__title">Mains</h3>
         <div class="item">
           <div class="item__title">Scallops</div>
@@ -74,7 +74,7 @@
           <div class="item__price">£44</div>
         </div>
       </section>
-      <section class="category">
+      <section class="desserts">
         <h3 class="category__title">Desserts</h3>
         <div class="item">
           <div class="item__title">Chocolate parfait</div>
