--- a/public/pages/kitchen-west.html
+++ b/public/pages/kitchen-west.html
@@ -33,7 +33,7 @@
         <i class="fa-solid fa-heart corazon__full"></i>
       </div>
       <h2 class="menu__title">Kitchen West</h2>
-      <section class="category">
+      <section class="starters">
         <h3 class="category__title">Starters</h3>
         <div class="item">
           <div class="item__title">Smoked Salmon</div>
@@ -54,7 +54,7 @@
           <div class="item__price">£20</div>
         </div>
       </section>
-      <section class="category">
+      <section class="mains">
         <h3 class="category__title">Mains</h3>
         <div class="item">
           <div class="item__title">Beef fillet with herb butter</div>
@@ -72,7 +72,7 @@
           <div class="item__price">£44</div>
         </div>
       </section>
-      <section class="category">
+      <section class="desserts">
         <h3 class="category__title">Desserts</h3>
         <div class="item">
           <div class="item__title">Treacle tart</div>
