--- a/public/pages/shoreditch-canteen.html
+++ b/public/pages/shoreditch-canteen.html
@@ -33,7 +33,7 @@
         <i class="fa-solid fa-heart corazon__full"></i>
       </div>
       <h2 class="menu__title">Shoreditch Canteen</h2>
-      <section class="category">
+      <section class="starters">
         <h3 class="category__title">Starters</h3>
         <div class="item">
           <div class="item__title">Tangy octopus tartare</div>
@@ -51,7 +51,7 @@
           <div class="item__price">£20</div>
         </div>
       </section>
-      <section class="category">
+      <section class="mains">
         <h3 class="category__title">Mains</h3>
         <div class="item">
           <div class="item__title">Scallops</div>
@@ -69,7 +69,7 @@
           <div class="item__price">£44</div>
         </div>
       </section>
-      <section class="category">
+      <section class="desserts">
         <h3 class="category__title">Desserts</h3>
         <div class="item">
           <div class="item__title">Forest fruit cheesecake</div>
