--- a/public/pages/the-bay-leaf.html
+++ b/public/pages/the-bay-leaf.html
@@ -34,7 +34,7 @@
         <i class="fa-solid fa-heart corazon__full"></i>
       </div>
       <h2 class="menu__title">The Bay Leaf</h2>
-      <section class="category">
+      <section class="starters">
         <h3 class="category__title">Starters</h3>
         <div class="item">
           <div class="item__title">Smoked Salmon</div>
@@ -52,7 +52,7 @@
           <div class="item__price">£20</div>
         </div>
       </section>
-      <section class="category">
+      <section class="mains">
         <h3 class="category__title">Mains</h3>
         <div class="item">
           <div class="item__title">Beef fillet with herb butter</div>
@@ -70,7 +70,7 @@
           <div class="item__price">£44</div>
         </div>
       </section>
-      <section class="category">
+      <section class="desserts">
         <h3 class="category__title">Desserts</h3>
         <div class="item">
           <div class="item__title">Treacle tart</div>
