added the green selection animation when item is hovered over

--- a/public/pages/kitchen-west.html
+++ b/public/pages/kitchen-west.html
@@ -20,7 +20,7 @@
 
 <body>
   <header class="logo">
-    <a href="index.html">
+    <a href="../../">
       <i class="back fa-solid fa-arrow-left"></i>
     </a>
     <img class=logo__image src="../images/logo/ohmyfood.png" alt="Logo">
@@ -28,17 +28,21 @@
   <img class=menu__image src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Kitchen West">
   <section class="menu-and-blank">
     <section class="menu">
-      <div class="corazon">
-        <i class="fa-regular fa-heart corazon__empty"></i>
-        <i class="fa-solid fa-heart corazon__full"></i>
+      <div class="heading">
+        <h1 class="menu__title">Kitchen West</h1>
+        <div class="heart-heading">
+          <i class="fa-regular fa-heart heart-heading__empty"></i>
+          <i class="fa-solid fa-heart heart-heading__full"></i>
+        </div>
       </div>
-      <h2 class="menu__title">Kitchen West</h2>
-      <section class="starters">
-        <h3 class="category__title">Starters</h3>
+      <section class="category">
+        <h2 class="category__title">Starters</h2>
         <div class="item">
-          <div class="item__title">Smoked Salmon</div>
-          <div class="item__content">With beetroot and horseradish</div>
-          <div class="item__price">£25</div>
+          <div class="item__text">
+            <h3 class="item__title">Smoked Salmon</h3>
+            <p class="item__content">With beetroot and horseradish</p>
+          </div>
+          <span class="item__price">£25</span>
           <div class="selection">
             <i class="selection__mark fa-solid fa-check"></i>
           </div>
@@ -54,8 +58,8 @@
           <div class="item__price">£20</div>
         </div>
       </section>
-      <section class="mains">
-        <h3 class="category__title">Mains</h3>
+      <section class="category">
+        <h2 class="category__title">Mains</h2>
         <div class="item">
           <div class="item__title">Beef fillet with herb butter</div>
           <div class="item__content">Served with a vegetable medley</div>
@@ -72,8 +76,8 @@
           <div class="item__price">£44</div>
         </div>
       </section>
-      <section class="desserts">
-        <h3 class="category__title">Desserts</h3>
+      <section class="category">
+        <h2 class="category__title">Desserts</h2>
         <div class="item">
           <div class="item__title">Treacle tart</div>
           <div class="item__content">With Cornish clotted cream</div>
