improved check mark animation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  <div class="loader"></div>
   <header class="logo">
       <img class=logo__image src="./public/images/logo/ohmyfood.png" alt="Logo">
   </header>
@@ -127,7 +128,7 @@
         <p>Legal notice</p>
       </li>
       <li>
-        <p>Contact</p>
+        <a href="mailto:elisabethvillette3@gmail.com">Contact</a>
       </li>
     </ul>
   </footer>
