--- a/public/pages/kitchen-west.html
+++ b/public/pages/kitchen-west.html
@@ -48,50 +48,90 @@
           </div>
         </div>
         <div class="item">
-          <div class="item__title">Ham hock terrine</div>
-          <div class="item__content">With piccalilli</div>
-          <div class="item__price">£35</div>
+          <div class="item__text">
+            <h3 class="item__title">Ham hock terrine</h3>
+            <p class="item__content">With piccalilli</p>
+          </div>
+          <span class="item__price">£35</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Poached egg</div>
-          <div class="item__content">With asparagus and hollandaise</div>
-          <div class="item__price">£20</div>
+          <div class="item__text">
+            <h3 class="item__title">Poached egg</h3>
+            <p class="item__content">With asparagus and hollandaise</p>
+          </div>
+          <span class="item__price">£20</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
       </section>
       <section class="category">
         <h2 class="category__title">Mains</h2>
         <div class="item">
-          <div class="item__title">Beef fillet with herb butter</div>
-          <div class="item__content">Served with a vegetable medley</div>
-          <div class="item__price">£40</div>
+          <div class="item__text">
+            <h3 class="item__title">Beef fillet with herb butter</h3>
+            <p class="item__content">Served with a vegetable medley</p>
+          </div>
+          <span class="item__price">£40</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Braised oxtail cottage pie</div>
-          <div class="item__content">With black truffle and parsnip puree</div>
-          <div class="item__price">£35</div>
+          <div class="item__text">
+            <h3 class="item__title">Braised oxtail cottage pie</h3>
+            <p class="item__content">With black truffle and parsnip puree</p>
+          </div>
+          <span class="item__price">£35</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Fillet of turbot</div>
-          <div class="item__content">With citrus dressing</div>
-          <div class="item__price">£44</div>
+          <div class="item__text">
+            <h3 class="item__title">Fillet of turbot</h3>
+            <p class="item__content">With citrus dressing</p>
+          </div>
+          <span class="item__price">£44</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
       </section>
       <section class="category">
         <h2 class="category__title">Desserts</h2>
         <div class="item">
-          <div class="item__title">Treacle tart</div>
-          <div class="item__content">With Cornish clotted cream</div>
-          <div class="item__price">£18</div>
+          <div class="item__text">
+            <h3 class="item__title">Treacle tart</h3>
+            <p class="item__content">With Cornish clotted cream</p>
+          </div>
+          <span class="item__price">£18</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Lemon posset</div>
-          <div class="item__content">With shortbread biscuit</div>
-          <div class="item__price">£22</div>
+          <div class="item__text">
+            <h3 class="item__title">Lemon posset</h3>
+            <p class="item__content">With shortbread biscuit</p>
+          </div>
+          <span class="item__price">£22</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Chocolate mousse</div>
-          <div class="item__content">With a hint of chili and a hazelnut tuile</div>
-          <div class="item__price">£23</div>
+          <div class="item__text">
+            <h3 class="item__title">Chocolate mousse</h3>
+            <p class="item__content">With a hint of chili and a hazelnut tuile</p>
+          </div>
+          <span class="item__price">£23</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <a class="order-button" href="#">Order</a>
       </section>
@@ -112,7 +152,7 @@
         <p>Legal notice</p>
       </li>
       <li>
-        <p>Contact</p>
+        <a href="mailto: elisabethvillette3@gmail.com">Contact</a>
       </li>
     </ul>
   </footer>
