--- a/public/pages/elderflower.html
+++ b/public/pages/elderflower.html
@@ -14,82 +14,134 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <script src="https://kit.fontawesome.com/a0c38bd0e3.js" crossorigin="anonymous"></script>
-  <title>Elderflower</title>
+  <title>Kitchen West</title>
   <link rel="stylesheet" href="../styles/pages.css">
 </head>
 
 <body>
   <header class="logo">
-    <nav>
+    <a href="../../">
       <i class="back fa-solid fa-arrow-left"></i>
-    </nav>
+    </a>
     <img class=logo__image src="../images/logo/ohmyfood.png" alt="Logo">
   </header>
   <img class=menu__image src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Elderflower">
   <section class="menu-and-blank">
     <section class="menu">
-      <div class="corazon">
-        <i class="fa-regular fa-heart corazon__empty"></i>
-        <i class="fa-solid fa-heart corazon__full"></i>
+      <div class="heading">
+        <h1 class="menu__title">Elderflower</h1>
+        <div class="heart-heading">
+          <i class="fa-regular fa-heart heart-heading__empty"></i>
+          <i class="fa-solid fa-heart heart-heading__full"></i>
+        </div>
       </div>
-      <h2 class="menu__title">Elderflower</h2>
-      <section class="starters">
-        <h3 class="category__title">Starters</h3>
+      <section class="category">
+        <h2 class="category__title">Starters</h2>
         <div class="item">
-          <div class="item__title">Brisket ravioli</div>
-          <div class="item__content">Served with truffle cream</div>
-          <div class="item__price">£25</div>
+          <div class="item__text">
+            <h3 class="item__title">Brisket ravioli</h3>
+            <p class="item__content">Served with truffle cream</p>
+          </div>
+          <span class="item__price">£25</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Beluga caviar</div>
-          <div class="item__content">Served on buckwheat blinis</div>
-          <div class="item__price">£35</div>
+          <div class="item__text">
+            <h3 class="item__title">Beluga caviar</h3>
+            <p class="item__content">Served on buckwheat blinis</p>
+          </div>
+          <span class="item__price">£35</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Lobster with pumpkin foam</div>
-          <div class="item__content">And orange zest</div>
-          <div class="item__price">£20</div>
+          <div class="item__text">
+            <h3 class="item__title">Lobster with pumpkin foam</h3>
+            <p class="item__content">And orange zest</p>
+          </div>
+          <span class="item__price">£20</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Duck terrine</div>
-          <div class="item__content">Fig jam and toasted brioche</div>
-          <div class="item__price">£35</div>
+          <div class="item__text">
+            <h3 class="item__title">Duck terrine</h3>
+            <p class="item__content">Fig jam and toasted brioche</p>
+          </div>
+          <span class="item__price">£35</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
       </section>
-      <section class="mains">
-        <h3 class="category__title">Mains</h3>
+      <section class="category">
+        <h2 class="category__title">Mains</h2>
         <div class="item">
-          <div class="item__title">Scallops</div>
-          <div class="item__content">On a bed of celeriac purée</div>
-          <div class="item__price">£40</div>
+          <div class="item__text">
+            <h3 class="item__title">Scallops</h3>
+            <p class="item__content">On a bed of celeriac purée</p>
+          </div>
+          <span class="item__price">£40</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Pan-fried langoustine</div>
-          <div class="item__content">With sweet potato mash</div>
-          <div class="item__price">£35</div>
+          <div class="item__text">
+            <h3 class="item__title">Pan-fried langoustine</h3>
+            <p class="item__content">With sweet potato mash</p>
+          </div>
+          <span class="item__price">£35</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Braised oxtail</div>
-          <div class="item__content">With lemon-zested wild rice</div>
-          <div class="item__price">£44</div>
+          <div class="item__text">
+            <h3 class="item__title">Braised oxtail</h3>
+            <p class="item__content">With lemon-zested wild rice</p>
+          </div>
+          <span class="item__price">£44</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
       </section>
-      <section class="desserts">
-        <h3 class="category__title">Desserts</h3>
+      <section class="category">
+        <h2 class="category__title">Desserts</h2>
         <div class="item">
-          <div class="item__title">Chocolate parfait</div>
-          <div class="item__content">With salted caramel ice cream</div>
-          <div class="item__price">£18</div>
+          <div class="item__text">
+            <h3 class="item__title">Chocolate parfait</h3>
+            <p class="item__content">With salted caramel ice cream</p>
+          </div>
+          <span class="item__price">£18</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Deconstructed rum baba</div>
-          <div class="item__content">With lemon coulis</div>
-          <div class="item__price">£22</div>
+          <div class="item__text">
+            <h3 class="item__title">Deconstructed rum baba</h3>
+            <p class="item__content">With lemon coulis</p>
+          </div>
+          <span class="item__price">£22</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <div class="item">
-          <div class="item__title">Lemon meringue pie</div>
-          <div class="item__content">Deconstructed</div>
-          <div class="item__price">£23</div>
+          <div class="item__text">
+            <h3 class="item__title">Lemon meringue pie</h3>
+            <p class="item__content">Deconstructed</p>
+          </div>
+          <span class="item__price">£23</span>
+          <div class="selection">
+            <i class="selection__mark fa-solid fa-check"></i>
+          </div>
         </div>
         <a class="order-button" href="#">Order</a>
       </section>
