removed the order button from the loading page animation

--- a/public/pages/kitchen-west.html
+++ b/public/pages/kitchen-west.html
@@ -35,106 +35,110 @@
           <i class="fa-solid fa-heart heart-heading__full"></i>
         </div>
       </div>
-      <section class="category">
-        <h2 class="category__title">Starters</h2>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Smoked Salmon</h3>
-            <p class="item__content">With beetroot and horseradish</p>
+      <div class="courses">
+        <section class="category">
+          <h2 class="category__title">Starters</h2>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Smoked Salmon</h3>
+              <p class="item__content">With beetroot and horseradish</p>
+            </div>
+            <span class="item__price">£25</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-          <span class="item__price">£25</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Ham hock terrine</h3>
+              <p class="item__content">With piccalilli</p>
+            </div>
+            <span class="item__price">£35</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Ham hock terrine</h3>
-            <p class="item__content">With piccalilli</p>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Poached egg</h3>
+              <p class="item__content">With asparagus and hollandaise</p>
+            </div>
+            <span class="item__price">£20</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-          <span class="item__price">£35</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
+        </section>
+        <section class="category">
+          <h2 class="category__title">Mains</h2>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Beef fillet with herb butter</h3>
+              <p class="item__content">Served with a vegetable medley</p>
+            </div>
+            <span class="item__price">£40</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Poached egg</h3>
-            <p class="item__content">With asparagus and hollandaise</p>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Braised oxtail cottage pie</h3>
+              <p class="item__content">With black truffle and parsnip puree</p>
+            </div>
+            <span class="item__price">£35</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-          <span class="item__price">£20</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Fillet of turbot</h3>
+              <p class="item__content">With citrus dressing</p>
+            </div>
+            <span class="item__price">£44</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-        </div>
-      </section>
-      <section class="category">
-        <h2 class="category__title">Mains</h2>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Beef fillet with herb butter</h3>
-            <p class="item__content">Served with a vegetable medley</p>
+        </section>
+        <section class="category">
+          <h2 class="category__title">Desserts</h2>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Treacle tart</h3>
+              <p class="item__content">With Cornish clotted cream</p>
+            </div>
+            <span class="item__price">£18</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-          <span class="item__price">£40</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Lemon posset</h3>
+              <p class="item__content">With shortbread biscuit</p>
+            </div>
+            <span class="item__price">£22</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Braised oxtail cottage pie</h3>
-            <p class="item__content">With black truffle and parsnip puree</p>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Chocolate mousse</h3>
+              <p class="item__content">With a hint of chili and a hazelnut tuile</p>
+            </div>
+            <span class="item__price">£23</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-          <span class="item__price">£35</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
-          </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Fillet of turbot</h3>
-            <p class="item__content">With citrus dressing</p>
-          </div>
-          <span class="item__price">£44</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
-          </div>
-        </div>
-      </section>
-      <section class="category">
-        <h2 class="category__title">Desserts</h2>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Treacle tart</h3>
-            <p class="item__content">With Cornish clotted cream</p>
-          </div>
-          <span class="item__price">£18</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
-          </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Lemon posset</h3>
-            <p class="item__content">With shortbread biscuit</p>
-          </div>
-          <span class="item__price">£22</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
-          </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Chocolate mousse</h3>
-            <p class="item__content">With a hint of chili and a hazelnut tuile</p>
-          </div>
-          <span class="item__price">£23</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
-          </div>
-        </div>
-        <a class="order-button" href="#">Order</a>
-      </section>
+        </section>
+        <section class="order">
+          <a class="order-button" href="#">Order</a>
+        </section>
+      </div>
     </section>
   </section>
   <footer>
