added spinner to the home page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 </head>
 
 <body>
-  <div class="loader"></div>
+  <div class="spinner-container" id="spinner-hidden">
+    <div class="spinner"></div>
+  </div>
   <header class="logo">
       <img class=logo__image src="./public/images/logo/ohmyfood.png" alt="Logo">
   </header>
